<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/report"
        android:icon="@drawable/input_black_24dp"
        android:title="@string/report"
        android:iconTint="@color/colorPrimaryDark"
        android:iconTintMode="multiply"></item>
    <item
    android:id="@+id/records"
    android:icon="@drawable/report"
    android:title="@string/records"
    android:iconTint="@color/colorPrimaryDark"
    android:iconTintMode="multiply"></item>
    <item
        android:id="@+id/location"
        android:icon="@drawable/map_black_24dp"
        android:title="@string/location"
        android:iconTint="@color/colorPrimaryDark"
        android:iconTintMode="multiply"></item>
    <item
        android:id="@+id/graph"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/graph"
        android:iconTint="@color/colorPrimaryDark"
        android:iconTintMode="multiply"></item>


</menu>